# qruler

./: .clang-format  .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  Config.cmake  QRulerConfig.cmake  README.md  qrulerConfig.cmake
.github/workflows/: build.yml
cmake/: AppStream.cmake  QtAppResources.cmake
resources/: about.html  about.md  resources.qrc
resources/icons/: qruler.svgz
resources/in/: about.info.md.in
resources/in/linux/: application.desktop.in
resources/linux/: io.github.qtilities.qruler.appdata.xml.in  io.github.qtilities.qruler.desktop.in  org.azdrums.qruler.appdata.xml  org.azdrums.qruler.desktop
resources/translations/: CMakeLists.txt  io.github.qtilities.qruler_fi.desktop.yaml  io.github.qtilities.qruler_fr.desktop.yaml  qruler.desktop.yaml  qruler.ts  qruler_ca.desktop.yaml  qruler_ca.ts  qruler_de.desktop.yaml  qruler_de.ts  qruler_el.desktop.yaml  qruler_en_GB.ts  qruler_et.desktop.yaml  qruler_et.ts  qruler_fi.ts  qruler_fr.desktop.yaml  qruler_fr.ts  qruler_he.desktop.yaml  qruler_he.ts  qruler_it.desktop.yaml  qruler_it.ts  qruler_it_IT.ts  qruler_ka.desktop.yaml  qruler_ka.ts  qruler_ko.desktop.yaml  qruler_ko.ts  qruler_lt.desktop.yaml  qruler_lt.ts  qruler_nl.desktop.yaml  qruler_nl.ts  qruler_pa.desktop.yaml  qruler_pl.desktop.yaml  qruler_pl.ts  qruler_pt.desktop.yaml  qruler_pt.ts  qruler_ru.desktop.yaml  qruler_ru.ts  qruler_tr.desktop.yaml  qruler_tr.ts
src/: application.cpp  application.hpp  dialogabout.cpp  dialogabout.hpp  dialogabout.ui  dialogprefs.cpp  dialogprefs.hpp  dialogprefs.ui  mainwindow.cpp  mainwindow.hpp  qruler.cpp  qruler.hpp  settings.cpp  settings.hpp
